--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <div class="container-fluid">
     <div class="row h-100 align-content-center bg-primary ">
         <div class="col text-center">
-            <h1 class="h11 p-4">Bæredygtige covers</h1>
+            <h2 class="h11 p-4">Bæredygtige covers</h2>
             <p class="p11">Få god samvittighed ved at købe vores lækre covers lavet af genbrugsplast fra verdens have.
                 Vi har covers til enhver smag. Det er enkelt, bæredygtigt og super smart.
 
@@ -143,8 +143,8 @@
                     </svg>
                 </div>
                 <div class="col-8 d-flex justify-content-center align-items-center flex-column">
-                    <p>Mindre forbrug</p>
-                    <h1>Mere genbrug</h1>
+                    <p class="text22">Mindre forbrug</p>
+                    <h1 class="text33">Mere genbrug</h1>
                 </div>
             </div>
 
@@ -162,8 +162,8 @@
                     </svg>
                 </div>
                <div class="col-8 d-flex justify-content-center align-items-center flex-column">
-                   <p>Mindre</p>
-                   <h1>Vandforbrug</h1>
+                   <p class="text22">Mindre</p>
+                   <h1 class="text33">Vandforbrug</h1>
                </div>
             </div>
 
@@ -191,8 +191,8 @@
                 </svg>
                 </div>
                 <div class="col-8 d-flex justify-content-center align-items-center flex-column">
-                <p>Mindre</p>
-                <h1>Forurening</h1>
+                <p class="text22">Mindre</p>
+                <h1 class="text33">Forurening</h1>
                 </div>
             </div>
         </div>
@@ -220,12 +220,13 @@
             </g>
         </svg>
     </div>
-    <p class="text-center text2">Tilmeld dig vores nyhedsbrev og få løbende nye opdateringer. </p>
+    <p class="text-center text2">Tilmeld dig vores nyhedsbrev
+        og vær den første til at høre om gode tilbud og nye produkter! </p>
 
     <div class="p-5 text-center">
         <div>
             <label for="mail"></label>
-            <input class="text-center p-2 input  " id="mail" name="Email" type="Email" placeholder="Email">
+            <input class="text-center p-2 input  " id="mail" name="Email" type="Email" placeholder="Skriv din email her">
 
         </div>
         <div class="p-3">
@@ -239,8 +240,8 @@
 </div>
 <!--img 3-->
 <div class="container-fluid p-0 ">
-<div class="h-100 image-medium row col-12 p-5 m-0">
-    <img src="images/Recycle_Badge.jpeg" alt="recycle">
+<div class="h-100 image-medium row col-12 m-0">
+    <img src="images/Recycle2.jpg" alt="recycle">
 </div>
 </div>
 <!--footer 1-->
