--- a/indkoebskurv.html
+++ b/indkoebskurv.html
@@ -106,14 +106,17 @@
 
 <!-- label og input til kort-->
 <div class="d-flex flex-column  align-content-stretch p-3 indkøb ">
-    <label class="p-3" for="cname">Navn</label>
-    <input class="p-2"  type="text" id="cname" name="Navn">
-    <label class="p-3" for="ccnum">Kortnummer</label>
-    <input class="p-2" type="text" id="ccnum" name="kortnummer">
-    <label class="p-3" for="expmonth">Udløbsdato</label>
-    <input class="p-2" type="text" id="expmonth" name="expmonth">
 
-    <label class="p-3" for="expyear">Udløbsår</label>
+    <label class="p-3" for="name">Navn</label>
+    <input class="p-2"  type="text" id="name" name="Navn">
+
+    <label class="p-3" for="text">Adresse</label>
+    <input class="p-2" type="text" id="text" name="kortnummer">
+
+    <label class="p-3" for="ccnum">Kortnummer</label>
+    <input class="p-2" type="text" id="ccnum" name="expmonth">
+
+    <label class="p-3" for="expyear">Udløbsdato</label>
     <input class="p-2" type="text" id="expyear" name="expyear">
 
     <label class="p-3" for="cvv">CVV</label>
