--- a/mellemside.html
+++ b/mellemside.html
@@ -101,16 +101,17 @@
     </div>
 </div>
 <!--iphone img-->
+<a href="iphone.html" class="d-block image-large iphon d-flex justify-content-center align-items-end">
+    <div class="text-center mb-5">
+        <p class="btn2">iPhone</p>
+    </div>
+</a>
 
-<div class="image-large iphon d-flex justify-content-center align-items-end">
-    <div class="text-center mb-5">
-<a href="iphone.html"class="btn2">iPhone</a></div>
-</div>
 <!--samsung img-->
-<div class="image-large samsung d-flex justify-content-center align-items-end">
+<a href="samsung.html" class="d-block image-large samsung d-flex justify-content-center align-items-end">
     <div class="text-center mb-5">
-<a href="samsung.html" class="btn2">Samsung</a></div>
-</div>
+<p class="btn2">Samsung</p></div>
+</a>
 
 
 
