--- a/tilmedle.html
+++ b/tilmedle.html
@@ -106,7 +106,7 @@
 <!--text-->
 <div class="container-fluid">
     <h1 class="text-center pt-4">
-        Tak for din tilmedling
+        Tak for din tilmelding
     </h1>
 </div>
 <br>
