Jeg har givet tekst mere padding + centreret tekst også. Knappen har fået en border-radius på 5 px. Skift bg på iPhone Covers div.

--- a/iphone.html
+++ b/iphone.html
@@ -107,119 +107,118 @@
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
         <div class="col text-center text-white">
-            <h1 class="">IPhone</h1>
+            <h1 class="">iPhone</h1>
             <p class="mt-2">Køb et lækkert cover til din iPhone</p>
         </div>
     </div>
 </div>
 <!--cover og telefoner-->
-<div class="row gy-3">
-    <div class="row gy-3 mt-3 justify-content-center">
-        <div class="col-auto">
-            <div class="image-small redcover">
-                <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
-                <div class="">
-                    <p class="pt-2">Hand in Hand</p>
-                    <h2 class="pt-2 text-center">249,00 kr.</h2>
-                </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
-            </div>
-        </div>
 
-        <div class="col-auto">
-            <div class="image-small orangecover">
-                <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
-                <div class="">
-                    <p class="pt-2 text-center">Flower</p>
-                    <h2 class="pt-2 text-center">249,00 kr.</h2>
-                </div>
-                <!--læg i kurv-->
-                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
-            </div>
-        </div>
-
-        <div class="col-auto">
-            <div class="image-small greencover">
-                <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
-                <div>
-                    <p class="pt-2 text-center">Earth</p>
-                    <h2 class="pt-2 text-center">249,00 kr.</h2>
-                </div>
-                <!--læg i kurv-->
-                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
-            </div>
-        </div>
-
-        <div class="col-auto">
-            <div class="image-small greycover">
-                <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover">
-                <div>
-                <p class="pt-2 text-center">Woman</p>
+<div class="row gy-3 mt-3 justify-content-center">
+    <div class="col-auto">
+        <div class="image-small redcover">
+            <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
+            <div class="">
+                <p class="pt-2">Hand in Hand</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
-                </div>
-                <!--læg i kurv-->
-                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
             </div>
-        </div>
-
-        <div class="col-auto">
-            <div class="image-small orangecover2">
-                <img class="coverbillede5" src="images/Orange_Cover.jpg" alt="orange cover2">
-                <div class="">
-                    <p class="pt-2 text-center">Flower</p>
-                    <h2 class="pt-2 text-center">249,00 kr.</h2>
-                </div>
-                <!--læg i kurv-->
-                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
-            </div>
-        </div>
-
-        <div class="col-auto">
-            <div class="image-small redcover2">
-                <img class="coverbillede6" src="images/Red_Cover.jpg" alt="red cover2">
-                <div class="">
-                    <p class="pt-2">Hand in Hand</p>
-                    <h2 class="pt-2 text-center">249,00 kr.</h2>
-                </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
-            </div>
-        </div>
-
-        <div class="col-auto">
-            <div class="image-small greycover2">
-                <img class="coverbillede7" src="images/Grey_Cover.jpg" alt="grey cover2">
-                <div>
-                    <p class="pt-2 text-center">Woman</p>
-                    <h2 class="pt-2 text-center">249,00 kr.</h2>
-                </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
-            </div>
-        </div>
-
-        <div class="col-auto">
-            <div class="image-small greencover2">
-                <img class="coverbillede8" src="images/Green_Cover.jpg" alt="green cover2">
-                <div>
-                    <p class="pt-2 text-center">Earth</p>
-                    <h2 class="pt-2 text-center">249,00 kr.</h2>
-                </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
-            </div>
-        </div>
-
-        <div class="col-auto">
-            <div class="image-small orangecover3">
-                <img class="coverbillede9" src="images/Orange_Cover.jpg" alt="orange cover3">
-                <div class="">
-                    <p class="pt-2 text-center">Flower</p>
-                    <h2 class="pt-2 text-center">249,00 kr.</h2>
-                </div>
-                <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
-            </div>
+            <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
         </div>
     </div>
 
+    <div class="col-auto">
+        <div class="image-small orangecover">
+            <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
+            <div class="">
+                <p class="pt-2 text-center">Flower</p>
+                <h2 class="pt-2 text-center">249,00 kr.</h2>
+            </div>
+            <!--læg i kurv-->
+            <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+        </div>
+    </div>
+
+    <div class="col-auto">
+        <div class="image-small greencover">
+            <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
+            <div>
+                <p class="pt-2 text-center">Earth</p>
+                <h2 class="pt-2 text-center">249,00 kr.</h2>
+            </div>
+            <!--læg i kurv-->
+            <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+        </div>
+    </div>
+
+    <div class="col-auto">
+        <div class="image-small greycover">
+            <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover">
+            <div>
+            <p class="pt-2 text-center">Woman</p>
+            <h2 class="pt-2 text-center">249,00 kr.</h2>
+            </div>
+            <!--læg i kurv-->
+            <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+        </div>
+    </div>
+
+    <div class="col-auto">
+        <div class="image-small orangecover2">
+            <img class="coverbillede5" src="images/Orange_Cover.jpg" alt="orange cover2">
+            <div class="">
+                <p class="pt-2 text-center">Flower</p>
+                <h2 class="pt-2 text-center">249,00 kr.</h2>
+            </div>
+            <!--læg i kurv-->
+            <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+        </div>
+    </div>
+
+    <div class="col-auto">
+        <div class="image-small redcover2">
+            <img class="coverbillede6" src="images/Red_Cover.jpg" alt="red cover2">
+            <div class="">
+                <p class="pt-2">Hand in Hand</p>
+                <h2 class="pt-2 text-center">249,00 kr.</h2>
+            </div>
+            <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+        </div>
+    </div>
+
+    <div class="col-auto">
+        <div class="image-small greycover2">
+            <img class="coverbillede7" src="images/Grey_Cover.jpg" alt="grey cover2">
+            <div>
+                <p class="pt-2 text-center">Woman</p>
+                <h2 class="pt-2 text-center">249,00 kr.</h2>
+            </div>
+            <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+        </div>
+    </div>
+
+    <div class="col-auto">
+        <div class="image-small greencover2">
+            <img class="coverbillede8" src="images/Green_Cover.jpg" alt="green cover2">
+            <div>
+                <p class="pt-2 text-center">Earth</p>
+                <h2 class="pt-2 text-center">249,00 kr.</h2>
+            </div>
+            <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+        </div>
+    </div>
+
+    <div class="col-auto">
+        <div class="image-small orangecover3">
+            <img class="coverbillede9" src="images/Orange_Cover.jpg" alt="orange cover3">
+            <div class="">
+                <p class="pt-2 text-center">Flower</p>
+                <h2 class="pt-2 text-center">249,00 kr.</h2>
+            </div>
+            <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
+        </div>
+    </div>
 </div>
+
 <!--footer-->
 <div class="d-flex justify-content-evenly color2 p-3 align-items-center">
     <svg xmlns="http://www.w3.org/2000/svg" width="40.5" height="31.5" viewBox="0 0 40.5 31.5">
