--- a/login.html
+++ b/login.html
@@ -117,7 +117,7 @@
         <!--Form som bruges til at få oplysninger fra brugeren. Denne info sendes så til back-end via URL-->
     <!--text-->
 
-        <div class="tekst20 col text-center m-5"><p>Tilmeld dig vores kundeklub og få gode fordele.</p></div>
+        <div class="tekst20 col text-center"><p>Tilmeld dig vores kundeklub og få gode fordele.</p></div>
 
 
         <div class="container-fluid">
@@ -159,6 +159,12 @@
             </form>
         </div>
 
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
