--- a/mellemside.html
+++ b/mellemside.html
@@ -104,12 +104,12 @@
 
 <div class="image-large iphon d-flex justify-content-center align-items-end">
     <div class="text-center mb-5">
-<a href="iphone.html"class="btn2">iPhone</a></div>
+<a href="iphone.html"class="btn2 p-2">iPhone</a></div>
 </div>
 <!--samsung img-->
 <div class="image-large samsung d-flex justify-content-center align-items-end">
     <div class="text-center mb-5">
-<a href="samsung.html" class="btn2">Samsung</a></div>
+<a href="samsung.html" class="btn2 p-2">Samsung</a></div>
 </div>
 
 
