Jeg har givet tekst mere padding + centreret tekst også. Knappen har fået en border-radius på 5 px. Skift bg på iPhone Covers div.

--- a/login.html
+++ b/login.html
@@ -117,7 +117,9 @@
         <!--Form som bruges til at få oplysninger fra brugeren. Denne info sendes så til back-end via URL-->
     <!--text-->
 
-        <div class="tekst20 col text-center"><p>Tilmeld dig vores kundeklub og få gode fordele.</p></div>
+        <div class="tekst20 col text-center"><p>Tilbagevendende kunde</p></div>
+        <div class="tekst21 col text-center px-4 pt-4"><p>Når du har en konto hos os, kan du handle hurtigere,
+            være opdateret på din ordres status og holde styr på dine tidligere køb.</p></div>
 
 
         <div class="container-fluid">
