--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <div class="container-fluid">
     <div class="row h-100 align-content-center bg-primary ">
         <div class="col text-center">
-            <h2 class="h11 p-4">Bæredygtige covers</h2>
+            <h2 class="h11 p-4 pt-5">Bæredygtige covers</h2>
             <p class="p11">Få god samvittighed ved at købe vores lækre covers lavet af genbrugsplast fra verdens have.
                 Vi har covers til enhver smag. Det er enkelt, bæredygtigt og super smart.
 
