--- a/mellemside.html
+++ b/mellemside.html
@@ -102,15 +102,15 @@
 </div>
 <!--iphone img-->
 
-<div class="image-large iphon d-flex justify-content-center align-items-end">
+<a href="iphone.html" class="image-large iphon d-flex justify-content-center align-items-end">
     <div class="text-center mb-5">
-<a href="iphone.html" class="btn2">iPhone</a></div>
-</div>
+<p  class="btn2">iPhone</p></div>
+</a>
 <!--samsung img-->
-<div class="image-large samsung d-flex justify-content-center align-items-end">
+<a href="samsung.html" class="image-large samsung d-flex justify-content-center align-items-end">
     <div class="text-center mb-5">
-<a href="samsung.html" class="btn2">Samsung</a></div>
-</div>
+<p class="btn2">Samsung</p></div>
+</a>
 
 
 
