--- a/tilmedle.html
+++ b/tilmedle.html
@@ -108,26 +108,20 @@
     <h1 class="text-center pt-4">
         Tak for din tilmelding
     </h1>
+    <div class="container-fluid">
+    <p class="mt-4"> Som modtager af vorse nyhedsbreve kan du se frem til at få spændende mails med gode tilbud, nyheder, og ideer. </p>
+    <p class="mt-4"> Vi glæder os til sende dig alt det bedste, vi har at byde på.</p></div>
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<div class="text-center mt-4">
+<h3 class=" texth3 pb-4">Ocean Case teamet</h3>
+</div>
+
+    <!--Link til at komme tilbage til forsiden-->
+    <div class="tilbage_knap_padding d-flex flex-column align-content-center align-items-center">
+    <a class="tilbage_knap " href="index.html">Tilbage til forsiden</a>
+    </div>
+
+
 <br>
 <br>
 <br>
