--- a/tilmedle.html
+++ b/tilmedle.html
@@ -108,7 +108,7 @@
     <h1 class="text-center pt-4">
         Tak for din tilmelding
     </h1>
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
     <p class="mt-4"> Som modtager af vorse nyhedsbreve kan du se frem til at få spændende mails med gode tilbud, nyheder, og ideer. </p>
     <p class="mt-4"> Vi glæder os til sende dig alt det bedste, vi har at byde på.</p></div>
 </div>
@@ -128,7 +128,14 @@
 <br>
 <br>
 <br>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 
