--- a/samsung.html
+++ b/samsung.html
@@ -124,7 +124,7 @@
             <div class="image-small redcover">
                 <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
                 <div class="">
-                    <p class="pt-2 text-center">Hand In Hand</p>
+                    <p class="pt-2 text-center">Hånd I Hånd</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -138,7 +138,7 @@
             <div class="image-small orangecover">
                 <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
                 <div class="">
-                    <p class="pt-2 text-center">Flower</p>
+                    <p class="pt-2 text-center">Blomst</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -151,7 +151,7 @@
             <div class="image-small greencover">
                 <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
                 <div>
-                    <p class="pt-2 text-center">Earth</p>
+                    <p class="pt-2 text-center">Verden</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -165,7 +165,7 @@
             <div class="image-small greycover">
                 <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
                 <div>
-                    <p class="pt-2 text-center">Woman</p>
+                    <p class="pt-2 text-center">Dame</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -177,7 +177,7 @@
             <div class="image-small orangecover2">
                 <img class="coverbillede5" src="images/Orange_Cover.jpg" alt="orange cover2">
                 <div class="">
-                    <p class="pt-2 text-center">Flower</p>
+                    <p class="pt-2 text-center">Blomst</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -188,7 +188,7 @@
             <div class="image-small redcover2">
                 <img class="coverbillede6" src="images/Red_Cover.jpg" alt="red cover2">
                 <div class="">
-                    <p class="pt-2">Hand in Hand</p>
+                    <p class="pt-2">Hånd I Hånd</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -199,7 +199,7 @@
             <div class="image-small greycover2">
                 <img class="coverbillede7" src="images/Grey_Cover.jpg" alt="grey cover2">
                 <div>
-                    <p class="pt-2 text-center">Woman</p>
+                    <p class="pt-2 text-center">Dame</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -210,7 +210,7 @@
             <div class="image-small greencover2">
                 <img class="coverbillede8" src="images/Green_Cover.jpg" alt="green cover2">
                 <div>
-                    <p class="pt-2 text-center">Earth</p>
+                    <p class="pt-2 text-center">Verden</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -221,7 +221,7 @@
             <div class="image-small orangecover3">
                 <img class="coverbillede9" src="images/Orange_Cover.jpg" alt="orange cover3">
                 <div class="">
-                    <p class="pt-2 text-center">Flower</p>
+                    <p class="pt-2 text-center">Blomst</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
