Ændret tekst på covers til dansk på Iphone-siden

--- a/iphone.html
+++ b/iphone.html
@@ -119,7 +119,7 @@
         <div class="image-small redcover">
             <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
             <div class="">
-                <p class="pt-2">Hand in Hand</p>
+                <p class="pt-2">Hånd I Hånd</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
             </div>
             <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -130,7 +130,7 @@
         <div class="image-small orangecover">
             <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
             <div class="">
-                <p class="pt-2 text-center">Flower</p>
+                <p class="pt-2 text-center">Blomst</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
             </div>
             <!--læg i kurv-->
@@ -142,7 +142,7 @@
         <div class="image-small greencover">
             <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
             <div>
-                <p class="pt-2 text-center">Earth</p>
+                <p class="pt-2 text-center">Verden</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
             </div>
             <!--læg i kurv-->
@@ -154,7 +154,7 @@
         <div class="image-small greycover">
             <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover">
             <div>
-            <p class="pt-2 text-center">Woman</p>
+            <p class="pt-2 text-center">Dame</p>
             <h2 class="pt-2 text-center">249,00 kr.</h2>
             </div>
             <!--læg i kurv-->
@@ -166,7 +166,7 @@
         <div class="image-small orangecover2">
             <img class="coverbillede5" src="images/Orange_Cover.jpg" alt="orange cover2">
             <div class="">
-                <p class="pt-2 text-center">Flower</p>
+                <p class="pt-2 text-center">Blomst</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
             </div>
             <!--læg i kurv-->
@@ -178,7 +178,7 @@
         <div class="image-small redcover2">
             <img class="coverbillede6" src="images/Red_Cover.jpg" alt="red cover2">
             <div class="">
-                <p class="pt-2">Hand in Hand</p>
+                <p class="pt-2">Hånd I Hånd</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
             </div>
             <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -189,7 +189,7 @@
         <div class="image-small greycover2">
             <img class="coverbillede7" src="images/Grey_Cover.jpg" alt="grey cover2">
             <div>
-                <p class="pt-2 text-center">Woman</p>
+                <p class="pt-2 text-center">Dame</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
             </div>
             <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -200,7 +200,7 @@
         <div class="image-small greencover2">
             <img class="coverbillede8" src="images/Green_Cover.jpg" alt="green cover2">
             <div>
-                <p class="pt-2 text-center">Earth</p>
+                <p class="pt-2 text-center">Verden</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
             </div>
             <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
@@ -211,7 +211,7 @@
         <div class="image-small orangecover3">
             <img class="coverbillede9" src="images/Orange_Cover.jpg" alt="orange cover3">
             <div class="">
-                <p class="pt-2 text-center">Flower</p>
+                <p class="pt-2 text-center">Blomst</p>
                 <h2 class="pt-2 text-center">249,00 kr.</h2>
             </div>
             <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
