--- a/tilmedle.html
+++ b/tilmedle.html
@@ -109,7 +109,7 @@
         Tak for din tilmelding
     </h1>
     <div class="container-fluid text-center">
-    <p class="mt-4"> Som modtager af vorse nyhedsbreve kan du se frem til at få spændende mails med gode tilbud, nyheder, og ideer. </p>
+    <p class="mt-4"> Som modtager af vores nyhedsbreve kan du se frem til at få spændende mails med gode tilbud, nyheder, og ideer. </p>
     <p class="mt-4"> Vi glæder os til sende dig alt det bedste, vi har at byde på.</p></div>
 </div>
 <div class="text-center mt-4">
