--- a/samsung.html
+++ b/samsung.html
@@ -124,7 +124,7 @@
             <div class="image-small redcover">
                 <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
                 <div class="">
-                    <p class="pt-2 text-center">Hand In Hand</p>
+                    <p class="pt-2 text-center">Hand in Hand</p>
                     <h2 class="pt-2 text-center">249,00 kr.</h2>
                 </div>
                 <a class="kurv" href="indkoebskurv.html">Læg i kurv</a>
