Ændret tekst + nyt link

--- a/om.html
+++ b/om.html
@@ -136,24 +136,26 @@
             <div class="overskrift_tekst container-fluid text-primary col-lg-6">
                 <h1 class="sacramento text-center pt-4">Ocean Case</h1>
                 <p class="josefine_sans_regular p-4">
-                    Ocean Case er et bæredygtigt tiltag der
-                    har en stor fælles vision om at gøre verden
-                    til et mere miljøvenligt og bæredygtigt sted.
+                    Ocean Case er en miljøvenlig virksomhed. Vi er skabt til dig,
+                    som ønsker en bæredygtig løsning, når du handler mobilcovers.
+                    Vi gør det muligt for dig at handle bæredygtige produkter,
+                    som samtidig er flotte.
                     <br>
                     <br>
-                    Ocean Case er til dig der ønsker en
-                    miljøvenlig løsning men samtidig er med
-                    til at gøre verden til et bedre sted. Det
-                    handler ikke om kun at beskytte din
-                    telefon, men også at beskytte vores jord.
+                    Når du køber vores produkter bidrager du til at gøre verden
+                    til et bedre sted. Det handler ikke kun om at beskytte din
+                    telefon, men også om at beskytte vores jord.
                     <br>
                     <br>
-                    At leve bæredygtigt betyder, at vi kan
-                    skaffe de nuværende mennesker og
-                    miljøet det bedste livsgrundlag her og nu.
-                    Men dog på en måde, der ikke fratager
-                    de kommende generationers muligheder
-                    for at dække deres behov.
+                    8 millioner ton plastik bliver hvert år dumpet i verdenshavene,
+                    og det må stoppe. Ocean Case bygger på ønsket om at forbedre miljøet
+                    og at passe bedre på vores verden. Derfor er vores covers lavet
+                    af genbrugsplast fra havet.
+                    <br>
+                    <br>
+                    Ud over at produkterne er bæredygtige, har vi
+                    sparet på emballagen, som vores produkter bliver sendt i. Vi prøver
+                    hele tiden på at blive mere miljøvenlige.
                 </p>
             </div>
 
@@ -165,19 +167,29 @@
 
             <!--Div der holder mere brødtekst-->
             <div class="lilla_tekst col-lg-6 verden_kompost">
-                <p class="josefine_sans_regular p-4 verden_tekst text-start">
-                    Ocean Case bygger på ønsket om at
-                    forbedre miljøet og at passe bedre på
-                    vores verden. Derfor er alle vores pro-
-                    dukter miljøvenlige, produceret i 100%
-                    genanvendelige materialer.
+                <h1 class="sacramento text-center pt-4">Vidste du?</h1>
+                <p class="josefine_sans_regular p-4 text-start">
+                    At mere end halvdelen af verdens skildpadder har spist plastik?
                     <br>
                     <br>
-                    Ud over at produkterne er bæredygtige,
-                    har vi dog også sparet på emballagen
-                    vores produkter bliver sendt i. Vi prøver
-                    hele tiden på at blive mere miljøvenlige.
+                    1 million havfugle og 100.000 havpattedyr og skildpadder dør hvert år
+                    på grund af plastikforurening.
+                    Eksperter mener, at 99% af alle havfugle vil have plastik i deres fordøjelsesrør,
+                    når vi når år 2050.
+                    <br>
+                    <br>
+                    Hos Ocean Case er vores vision at opsamle plastik fra havet og lave mobilcovers ud af det,
+                    for på den måde at mindske forbruget af plastik.
+                    Vores covers er lavet i god kvalitet, så de kan beskytte din teledon længe.
+                    <br>
+                    <br>
+                    Vil du være med til at mindske mængden af plastik i verdens have?
+                    Køb et cover fra Ocean Case og gør livet bedre for verdens havdyr.
+                    Med Ocean Case får du mere end bare et cover.
                 </p>
+                <div class="shop_nu_padding">
+                    <a class="shop_nu" href="mellemside.html">Shop nu</a>
+                </div>
             </div>
 
     </div>
