--- a/tilmedle.html
+++ b/tilmedle.html
@@ -109,8 +109,8 @@
         Tak for din tilmelding
     </h1>
     <div class="container-fluid text-center">
-    <p class="mt-4"> Som modtager af vores nyhedsbreve kan du se frem til at få spændende mails med gode tilbud, nyheder, og ideer. </p>
-    <p class="mt-4"> Vi glæder os til sende dig alt det bedste, vi har at byde på.</p></div>
+    <p class="mt-4"> Som modtager af vores nyhedsbrev, kan du se frem til at få spændende mails med gode tilbud, nyheder og idéer. </p>
+    <p class="mt-4"> Vi glæder os til sende dig alt det bedste, vi har at tilbyde.</p></div>
 </div>
 <div class="text-center mt-4">
 <h3 class=" texth3 pb-4">Ocean Case teamet</h3>
