--- a/kontakt.html
+++ b/kontakt.html
@@ -43,6 +43,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap" rel="stylesheet">
 
+    <!--Josefine fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;         500&family=Sacramento&display=swap" rel="stylesheet">
+
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
@@ -118,13 +123,13 @@
 
 
         <!--Farvet boks med teksten "Kontakt os"-->
-        <div class="container-fluid kontakt_os josefine_sans_medium text-center text-secondary">
+        <div class="container-fluid kontakt_os text-center text-secondary">
             <h1>Kontakt os</h1>
         </div>
 
 
         <!--Telefonnummer og mail-->
-        <div class="container-fluid text-primary text-center josefine_sans_light">
+        <div class="container-fluid text-primary text-center">
 
             <div class="tlf">
                 <i class="fas fa-phone-square-alt fa-2x"></i>
