--- a/om.html
+++ b/om.html
@@ -43,6 +43,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap" rel="stylesheet">
 
+    <!--Josefine fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;         500&family=Sacramento&display=swap" rel="stylesheet">
 
     <!--Links til Sacramento font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -124,7 +128,7 @@
 
 
         <!--Farvet boks med teksten "Om os"-->
-        <div class="container-fluid om_os josefine_sans_medium text-center text-secondary">
+        <div class="container-fluid om_os text-center text-secondary">
             <h1>Om os</h1>
         </div>
 
