--- a/takspg.html
+++ b/takspg.html
@@ -43,6 +43,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap" rel="stylesheet">
 
+    <!--Josefine fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;         500&family=Sacramento&display=swap" rel="stylesheet">
+
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
